fixed layout issue with lists

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,7 @@
   -o-transition:all 500ms ease-in;
 }
 
-ul, ol {
+#social, #me {
   padding: 0;
   margin: 0 0 10px 0px;
   list-style: none outside;
